# snow-website

./: .gitignore  Cargo.toml  README.md  flake.nix  index.html  justfile  rust-toolchain.toml  tailwind.config.js  wrangler.toml
public/: tailwind.css
src/: constants.rs  lib.rs
src/components/: mod.rs
src/components/layout/: navigation.rs
src/components/sections/: about.rs  contact.rs  hero.rs  mod.rs  projects.rs  skills.rs
src/components/ui/: animated_background.rs  custom_cursor.rs  discord_badge.rs  footer.rs  loading_screen.rs  mod.rs  terminal_badge.rs  terminal_modal.rs
src/pages/: home.rs
