[package]
name = "snow_website"
version = "0.1.0"
edition = "2021"
authors = ["SailorSnoW <sailorsnow@pm.me>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.8" }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }

# Client-side dependencies
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Document", "Window", "KeyboardEvent", "NodeList", "HtmlElement", "Element", "DomRect", "HtmlBodyElement", "CssStyleDeclaration"] }


[features]
default = ["csr"]
csr = ["leptos/csr"]


[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

# Optimized WASM profile for Leptos
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

